src/objects/fc_csc__Object_Map__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fc_csc__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Zuora</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fc_csc__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Target_Type__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Zuora</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object Map</label>
    <listViews>
        <fullName>fc_csc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fc_csc__All_with_columns</fullName>
        <columns>NAME</columns>
        <columns>fc_csc__Source_Object__c</columns>
        <columns>fc_csc__Source_Type__c</columns>
        <columns>fc_csc__Target_Object__c</columns>
        <columns>fc_csc__Target_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with columns</label>
    </listViews>
    <nameField>
        <displayFormat>MAP-{000000}</displayFormat>
        <label>Object Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>